--- a/.github/workflows/readme-checker.yml
+++ b/.github/workflows/readme-checker.yml
@@ -7,7 +7,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: DavidAnson/markdownlint-cli2-action@v11
         with:
-          config: "./custom.markdownlint.jsonc"
+          config: "./.markdownlint.json"
           globs: |
             *.md
             !test/*.md
